# runner-air-planner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DAVD_Examen_final_2025_2026.ipynb  Dockerfile  Dockerfile.dev  EJECUTAR.md  Makefile  Prueba_intertrimestral_16102025.ipynb  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/app/: __init__.py  main.py  model.py  storage.py
configs/: settings.example.toml
data/: ml_dataset_accumulated.csv
data/models/: running_model.pkl
data_pipeline/: ingest_madrid_air.py
docs/: model_features_analysis.md
frontend/: app.js  index.html  streamlit_app.py  styles.css
scripts/: collect_multiple_days.py  docker-entrypoint.sh  fetch_air_quality.py  start_render.sh
src/runner_air_planner/: __init__.py  config.py
src/runner_air_planner/api/: __init__.py  main.py
src/runner_air_planner/backend/: __init__.py
src/runner_air_planner/backend/app/: cli_master_data.py  main.py  master_data.py  weather.py
src/runner_air_planner/data_pipeline/: __init__.py  accumulate_data.py  cli_collect.py  data_collector.py  ingest_madrid_air.py  master_data.py  weather.py
src/runner_air_planner/data_sources/: __init__.py  madrid_air.py
src/runner_air_planner/frontend/: __init__.py  streamlit_app.py
src/runner_air_planner/ml/: __init__.py  model.py  predict.py  train.py
src/runner_air_planner/storage/: __init__.py  local.py
src/runner_air_planner/workflows/: __init__.py  fetch_latest_air_quality.py
tests/: test_backend_api.py  test_ingest.py  test_local_storage.py  test_madrid_air_client.py  test_model.py
