[tool.poetry]
name = "runner-air-planner"
version = "0.2.0"
description = "Pipeline, API, y frontend para planificar salidas a correr usando calidad del aire en Madrid."
authors = ["Runner Air Planner Maintainers <maintainers@example.com>"]
packages = [{ include = "runner_air_planner", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1"
requests = "^2.31"
fastapi = "^0.110"
uvicorn = { version = "^0.27", extras = ["standard"] }
scikit-learn = "^1.3"
numpy = "^1.26"
streamlit = "^1.32"
pydantic = "^2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
