[tool.poetry]
name = "runner-air-planner"
version = "0.2.0"
description = "Data pipeline y modelo ML para predecir el mejor momento para correr en Madrid."
authors = ["Runner Air Planner Maintainers <maintainers@example.com>"]
readme = "README.md"
packages = [{ include = "runner_air_planner", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1"
requests = "^2.31"
numpy = "^1.26"
scikit-learn = "^1.3"
streamlit = "^1.32"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = "^0.6.0"

[tool.poetry.scripts]
collect = "runner_air_planner.data_pipeline.cli_collect:main"
train = "runner_air_planner.ml.train:main"
predict = "runner_air_planner.ml.predict:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
